server/compilers/goLiteJS/src/test/ml2/valid/print1.go
// print and println of literals
package main

func main() {
    print(23, 23.0, true, 'a', "asdf")
    println(23, 23.0, true, 'a', "asdf")
}
