server/compilers/goLiteJS/src/test/ml2/invalid/binary21.go
// invalid <= types
package main

func main() {
    _ = 23 <= 23.0
}
